<resources>
    <string name="app_name" translatable="false">CineApp</string>

    <string name="title">Contacts</string>
    <string name="success">Success!</string>
    <string name="remote">Data coming from api</string>
    <string name="text_about_app">About app</string>
    <string name="text_bruna_phone" translatable="false">+55 21 99740.5040</string>
    <string name="text_version_app">versão: %1$s</string>
    <string name="lista_vazia">Empty list!</string>
    <string name="check_network_connection">Check your internet connection to get the movies list</string>
    <string name="cache">Data coming from cache</string>
    <string name="error">An error has occurred. Try again.</string>
    <string name="error_inesperado">An unexpected error has occurred!</string>
    <string name="error_cache">An error has occurred. Data is coming from the cache.</string>
    <string name="release_date">Release date: %1$s</string>


    <!--    Navigation-->
    <string name="title_movies_list">Movies list</string>
    <string name="title_about_app">About app</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="developer_name" translatable="false">bruna carbonesi</string>
    <string name="developer_mail" translatable="false">brunacarbonesi@gmail.com</string>
    <string name="occupation">android developer</string>
    <string name="rating">Rating</string>
</resources>