<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutAppActivity.AboutAppActivity"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_about_app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_round_arrow"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/activity_about_app_imageView_profile_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/profile_photo_foreground" />

    <TextView
        android:id="@+id/activity_about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_about_app_imageView_profile_photo"
        android:text="@string/developer_name"
        android:fontFamily="@font/foco_bold"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:layout_marginTop="4dp"/>
    <TextView
        android:id="@+id/activity_about_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textColor="@color/colorGreyLight"
        android:fontFamily="@font/foco_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_about_app_name"/>

    <TextView
        android:id="@+id/activity_about_app_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/foco_bold"
        android:text="@string/developer_mail"
        android:textSize="16sp"
        android:textColor="@color/colorGreyLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_about_app_title"
        app:layout_constraintVertical_bias="0.2"
        />
    <TextView
        android:id="@+id/activity_about_app_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/foco_light"
        android:text="@string/text_bruna_phone"
        android:textSize="16sp"
        android:textColor="@color/colorGreyLight"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_about_app_email" />

    <TextView
        android:id="@+id/activity_about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/foco_bold"
        android:text="@string/text_version_app"
        android:textSize="@dimen/activity_about_app_texts_infos"
        android:textColor="@color/colorGreyLight"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_about_app_phone"/>



</androidx.constraintlayout.widget.ConstraintLayout>